--- a/views/base.pug
+++ b/views/base.pug
@@ -24,5 +24,5 @@ html
     //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js')
     //- script(src='/js/login.js')
     //- script(src='/js/mapbox.js')
-    script(src='./js/bundle.js')
+    script(src='/js/bundle.js')
 
