Added payment implementation and booking schema

--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -1,6 +1,7 @@
 footer.footer
     .footer__logo
-        img(src='/img/logo-color.png' alt='RealFeel logo')
+        img(src='/img/logo.png', alt='RealFeel logo')
+        img(src='/img/realFeelText.png', alt='RealFeel logo')
     ul.footer__nav
         li:  a(href='#') About us
         li:  a(href='#') Downlowd apps
