--- a/views/_header.pug
+++ b/views/_header.pug
@@ -3,6 +3,7 @@ header.header
         a.nav__el(href='/') All tours
     .header__logo
         img(src='/img/logo.png', alt='RealFeel logo')
+        img(src='/img/realFeelText.png', alt='RealFeel logo')
     nav.nav.nav--user 
         if user
             a.nav__el.nav__el--logout Log out
