--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -4,8 +4,6 @@ footer.footer
         img(src='/img/realFeelText.png', alt='RealFeel logo')
     ul.footer__nav
         li:  a(href='#') About us
-        li:  a(href='#') Downlowd apps
-        li:  a(href='#') Become a guide
-        li:  a(href='#') Careeers
+        li:  a(href='#') Forgot Passoword
         li:  a(href='#') Contact
     p.footer__copyright &copy; by Andreea Lupse
