--- a/views/email/passwordReset.pug
+++ b/views/email/passwordReset.pug
@@ -1,7 +1,8 @@
 extends baseEmail
 
 block content
-    p Hi #{firstNam},
+    p Hi #{firstName},
+    
     p Forgot your password? You can change your password accesing the following link #{url}
     table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
         tbody
@@ -10,8 +11,8 @@ block content
                     table(role='presentation', border='0', cellpadding='0', cellspacing='0')
                         tbody
                             tr
-                                td
-                                    a(href=`${url}`, target='_blank') Reset your password
+                                td 
+                                
     p If you didn forget your password, please ignore this email!
    
     
