--- a/views/resetPassword.pug
+++ b/views/resetPassword.pug
@@ -6,7 +6,7 @@ block content
             h2.heading-secondary.ma-bt-md Reset password
                 form.form.form--resetPassword
                     .form__group
-                        p#token.tok(value=`${token}`) #{token}
+                        p#token.tokenStyle.tok(value=`${token}`) #{token}
                         label.form__label(for='password') New password
                         input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
                     .form__group.ma-bt-lg
