--- a/views/account.pug
+++ b/views/account.pug
@@ -14,17 +14,16 @@ block content
       nav.user-view__menu
         ul.side-nav
           +navItem('#', 'Settings','settings',true)
-          +navItem('#', 'My bookings','briefcase')
-          +navItem('#', 'My reviews','star')
-          +navItem('#', 'Billing','credit-card')
+          +navItem('/my-tours', 'My bookings','briefcase')
+          +navItem('/leaveReview', 'My reviews','star')
+          +navItem('/desactivateAccount', 'Desactivate account','credit-card')
         - if (user.role ==='admin')
           .admin-nav
               h5.admin-nav__heading Admin
               ul.side-nav
-                +navItem('#', 'Manage tours','map')
-                +navItem('#', 'Manage users','users')
-                +navItem('#', 'Manage reviews','star')
-                +navItem('#', 'Manage bookings','briefcase')
+                +navItem('/managetours', 'Manage tours','map')
+                +navItem('/manageusers', 'Manage users','users')
+
             
       .user-view__content
         .user-view__form-container
