--- a/views/account.pug
+++ b/views/account.pug
@@ -23,6 +23,7 @@ block content
               ul.side-nav
                 +navItem('/managetours', 'Manage tours','map')
                 +navItem('/manageusers', 'Manage users','users')
+                +navItem('/createTour', 'Create a new tour','add')
 
             
       .user-view__content
