Code refactoring for deployment-Part2

--- a/views/forgotPassword.pug
+++ b/views/forgotPassword.pug
@@ -7,6 +7,6 @@ block content
       form.form.form--forgotPassword
         .form__group
           label.form__label(for='email') Provide the email address where we can send you a link to change your password
-          input#email.form__input(type='email', placeholder='you@example.com', required)
+          input#email.form__input2(type='email', placeholder='you@example.com', required)
         .form__group
           button.btn.btn--green Send mail 
