--- a/views/base.pug
+++ b/views/base.pug
@@ -9,7 +9,7 @@ html
             link(rel='shortcut icon' type='/image/png' href='img/favicon5.png')
             link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
             title RealFeel | #{title}
-    body
+    body(data-alert=`${alert ? alert: ''}`)
         // HEADER
     include _header
 
